Books/Status module & auth info comments in controllers
